--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -14,7 +14,7 @@
         "pts": "pts",
         "rank": "Rank",
         "noWhiteSparks": "No inheritable white sparks.",
-        "whiteSparkCount": "Total Unique White Sparks",
+        "whiteSparkCount": "Unique Lineage White Sparks",
         "totalWhiteSparkCount": "Total Lineage White Sparks (including duplicates)",
         "parentSource": "Parent",
         "gpSource": "Grandparent"
