i18n: add translation for borrowed parent checkbox

--- a/src/locales/en/modals.json
+++ b/src/locales/en/modals.json
@@ -3,6 +3,7 @@
   "editParentTitle": "Edit Parent",
   "umaNameLabel": "Uma Name",
   "selectUmaPlaceholder": "Select uma name...",
+  "markAsBorrowed": "Mark as borrowed parent",
   "blueSparkSection": "Blue Spark",
   "pinkSparkSection": "Pink Spark",
   "typeLabel": "Type",
