i18n: add jp translation for borrowed parent checkbox

--- a/src/locales/jp/modals.json
+++ b/src/locales/jp/modals.json
@@ -3,6 +3,7 @@
   "editParentTitle": "親を編集",
   "umaNameLabel": "ウマ娘名",
   "selectUmaPlaceholder": "ウマ娘を選択...",
+  "markAsBorrowed": "レンタルウマ娘としてマーク",
   "blueSparkSection": "青因子",
   "pinkSparkSection": "赤因子",
   "typeLabel": "種類",
