i18n: add jp details translation key

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -23,6 +23,7 @@
     "noWhiteSparks": "白因子がありません。",
     "rank": "ランク",
     "borrowed": "レンタル",
+    "details": "詳細を表示",
     "lineage": "血統",
     "legacyOrigin": "継承元",
     "borrowedParent": "レンタルウマ娘",
