i18n: add parent detail modal title

--- a/src/locales/en/modals.json
+++ b/src/locales/en/modals.json
@@ -1,6 +1,7 @@
 {
   "addParentTitle": "Add New Parent",
   "editParentTitle": "Edit Parent",
+  "parentDetailsTitle": "Parent Details",
   "umaNameLabel": "Uma Name",
   "selectUmaPlaceholder": "Select uma name...",
   "markAsBorrowed": "Mark as borrowed parent",
