--- a/src/locales/jp/modals.json
+++ b/src/locales/jp/modals.json
@@ -1,6 +1,7 @@
 {
   "addParentTitle": "新しい親を追加",
   "editParentTitle": "親を編集",
+  "parentDetailsTitle": "親の詳細",
   "umaNameLabel": "ウマ娘名",
   "selectUmaPlaceholder": "ウマ娘を選択...",
   "markAsBorrowed": "レンタルウマ娘としてマーク",
