feat(metrics): implement total and unique spark counts

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -9,6 +9,7 @@
         "sortBy": "Sort By:",
         "avgScore": "Avg Score",
         "totalSparks": "Total Sparks",
+        "uniqueSparks": "Unique Sparks",
         "pair": "Pair",
         "of": "of"
     },
