--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -10,6 +10,7 @@
     "sortBy": "ソート:",
     "avgScore": "平均スコア",
     "totalSparks": "合計因子数",
+    "uniqueSparks": "ユニーク因子数",
     "pair": "ペア",
     "of": "/"
   },
