--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -79,7 +79,8 @@
         "bestTrainees": "Best Trainees for this Pair",
         "totalAffinity": "Total Affinity",
         "affinity": "Affinity",
-        "totalSkills": "Total Skills",
+        "totalWhiteSparks": "Total White Sparks",
+        "uniqueWhiteSparks": "Unique White Sparks",
         "noResults": "No Results",
         "noResultsMessage": "No suitable breeding pairs found for this trainee. Try adding more parents to your roster."
     }
