--- a/src/locales/en/modals.json
+++ b/src/locales/en/modals.json
@@ -2,6 +2,7 @@
   "addParentTitle": "Add New Parent",
   "editParentTitle": "Edit Parent",
   "parentDetailsTitle": "Parent Details",
+  "missingSkillsTitle": "Missing Wishlist Skills",
   "umaNameLabel": "Uma Name",
   "selectUmaPlaceholder": "Select uma name...",
   "markAsBorrowed": "Mark as borrowed parent",
