--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -84,6 +84,7 @@
         "uniqueWhiteSparks": "Unique White Sparks",
         "noResults": "No Results",
         "noResultsMessage": "No suitable breeding pairs found for this trainee. Try adding more parents to your roster.",
-        "allSkillsCovered": "This pair covers all {{count}} of your wishlist items!"
+        "allSkillsCovered": "This pair covers all {{count}} of your wishlist items!",
+        "missingSkills": "Missing Wishlist Skills"
     }
 }
