i18n(jp): add key for clear checks button

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -103,6 +103,7 @@
     "missingSkills": "不足しているウィッシュリストスキル",
     "viewMissing": "不足",
     "viewUnsaturated": "欠けあり",
-    "allSkillsSaturated": "ウィッシュリストの全スキルが、定義済みのすべての先祖に存在します。"
+    "allSkillsSaturated": "ウィッシュリストの全スキルが、定義済みのすべての先祖に存在します。",
+    "clearChecks": "チェックをクリア"
   }
 }
