feat(i18n): add translation key for saving parent

--- a/src/locales/en/modals.json
+++ b/src/locales/en/modals.json
@@ -15,6 +15,7 @@
   "whiteSparksSection": "Obtained White Sparks",
   "searchSkill": "Search skill...",
   "updateParentBtn": "Update Parent",
+  "saveParentBtn": "Save Parent",
   "calculateScoreBtn": "Calculate Score & Save",
   "inputRequiredTitle": "Input Required",
   "selectUmaAlert": "Please select an Uma Name.",
