feat(i18n): add japanese translation for saving parent

--- a/src/locales/jp/modals.json
+++ b/src/locales/jp/modals.json
@@ -15,6 +15,7 @@
   "whiteSparksSection": "白因子",
   "searchSkill": "スキルを検索...",
   "updateParentBtn": "親を更新",
+  "saveParentBtn": "親を保存",
   "calculateScoreBtn": "スコア計算 & 保存",
   "inputRequiredTitle": "入力が必要です",
   "selectUmaAlert": "ウマ娘名を選択してください。",
