i18n: add disclaimer key to common en translations

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -12,5 +12,6 @@
   "selectPlaceholder": "Select...",
   "searchPlaceholder": "Search...",
   "noResults": "No results found.",
-  "selectUmaTitle": "Select Trainee"
+  "selectUmaTitle": "Select Trainee",
+  "disclaimer": "Disclaimer"
 }
