i18n: add disclaimer key to common jp translations

--- a/src/locales/jp/common.json
+++ b/src/locales/jp/common.json
@@ -12,5 +12,6 @@
   "selectPlaceholder": "選択...",
   "searchPlaceholder": "検索...",
   "noResults": "結果が見つかりません。",
-  "selectUmaTitle": "育成ウマ娘を選択"
+  "selectUmaTitle": "育成ウマ娘を選択",
+  "disclaimer": "免責事項"
 }
