i18n: add explicit training rank keys

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -94,6 +94,8 @@
         "inputs": "Inputs",
         "targetStats": "Target Stats",
         "trainingRank": "Est. Final Rank",
+        "rankBelowSS": "Below SS+",
+        "rankSSPlus": "SS+ & Higher",
         "estimatedProbabilities": "Estimated Probabilities",
         "primaryBlueSpark": "3★ Primary Blue Spark",
         "primaryPinkSpark": "3★ Primary Pink Spark",
