--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -116,9 +116,13 @@
     "primaryPinkSpark": "★3 主要赤因子",
     "avgRuns": "平均{{value}}回",
     "noMissingSkills": "不足している高ランク（S/A）のウィッシュリストスキルはありません。",
+    "probScoreUpgrade": "スコア更新の確率",
+    "probAssumptionsTitle": "計算の前提条件",
+    "probAssumptionsText": "この確率は、子の*個体スコア*（祖父母ボーナス前）が、弱い方の親の個体スコアを超える推定値です。以下の前提に基づいています：\n\n- **育成結果:** 1回の育成で平均{{count}}個の白因子が獲得されると仮定します。\n- **白因子:** 潜在的な白因子のプールには、アクティブなサーバーのゲームデータで利用可能な、レース因子とシナリオ因子を除いた全ての因子が含まれます。\n- **固有スキル:** 固有スキルの結果は固定されているため、この計算には含まれません。\n- **モデル:** これは統計モデルであり、ゲーム内での結果を保証するものではありません。",
     "disclaimerText": "確率はゲームデータと特定の仮定に基づいた推定値です：",
     "disclaimerBlue": "青因子の確率は、2つの主要な青因子に対する目標ステータスに基づいています。",
     "disclaimerPink": "赤因子の確率は、Aランクの適性が{{count}}個あると仮定しています。",
-    "disclaimerWhite": "白因子の確率は、スキルの最高レアリティ版（例：金スキル）を取得することに基づいています。"
+    "disclaimerWhite": "白因子の確率は、スキルの最高レアリティ版（例：金スキル）を取得することに基づいています。",
+    "disclaimerScoreUpgrade": "スコア更新確率は、子の潜在的な個体スコアを、弱い方の親の個体スコアと比較します。"
   }
 }
