--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -75,15 +75,16 @@
         "traineeSuggestions": "Trainee Suggestions",
         "selectParent1": "Select Parent 1",
         "selectParent2": "Select Parent 2",
+        "baseAffinity": "Base Affinity (Parents)",
         "selectTrainee": "Select Trainee",
-        "excludeInbreeding": "Exclude Inbreeding",
-        "bestTrainees": "Best Trainees for this Pair",
-        "totalAffinity": "Total Affinity",
         "affinity": "Affinity",
-        "totalWhiteSparks": "Total White Sparks",
-        "uniqueWhiteSparks": "Unique White Sparks",
+        "totalAffinity": "Total Affinity",
         "noResults": "No Results",
         "noResultsMessage": "No suitable breeding pairs found for this trainee. Try adding more parents to your roster.",
+        "bestTrainees": "Best Trainees for this Pair",
+        "excludeInbreeding": "Exclude Inbreeding",
+        "totalWhiteSparks": "Total White Sparks",
+        "uniqueWhiteSparks": "Unique White Sparks",
         "allSkillsCovered": "This pair covers all {{count}} of your wishlist items!",
         "missingSkills": "Missing Wishlist Skills",
         "viewMissing": "Missing",
@@ -102,12 +103,11 @@
         "avgRuns": "Avg. {{value}} runs",
         "noMissingSkills": "No missing high-value (S/A rank) wishlist skills.",
         "probScoreUpgrade": "Probability of Score Upgrade",
-        "probAssumptionsTitle": "Calculation Assumptions",
         "probAssumptionsText": "This is an estimate of the child's *individual score* (before grandparent bonuses) exceeding the weaker parent's. It is based on these assumptions:\n\n- **Run Outcome:** An average of {{count}} white sparks are obtained per run.\n- **Blue Sparks (1★/2★/3★):**\n  - 1100+ Stats: 40% / 50% / 10%\n  - 600-1099 Stats: 44% / 50% / 6%\n- **Pink/White Sparks (1★/2★/3★):**\n  - Below SS+ Rank: 50% / 45% / 5%\n  - SS+ & Higher Rank: 20% / 70% / 10%\n- **Unique Spark:** Not factored into this calculation as its outcome is fixed.\n- **Model:** This is a statistical model and not a guarantee of in-game results.",
         "disclaimerText": "Probabilities are estimates based on game data and certain assumptions:",
-        "disclaimerBlue": "Blue spark probability is based on the target stats for your two primary blue sparks.",
+        "disclaimerScoreUpgrade": "Score upgrade probability compares the child's potential individual score to the weaker parent's individual score.",
+        "disclaimerBlue": "Blue spark probability is based on the target stats for all 5 blue factor types.",
         "disclaimerPink": "Pink spark probability assumes you have {{count}} A-rank aptitudes.",
-        "disclaimerWhite": "White spark probability is based on acquiring the highest-rarity version of the skill (e.g., the Gold version).",
-        "disclaimerScoreUpgrade": "Score upgrade probability compares the child's potential individual score to the weaker parent's individual score."
+        "disclaimerWhite": "White spark probability is based on the weighted average of all possible inheritable skills."
     }
 }
