locale(jp): update probability calculator text for new model

--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -1,7 +1,6 @@
 {
   "rosterTitle": "「{{projectName}}」のスコア付きウマ娘一覧",
   "addParentBtn": "新しい親を追加",
-  "placeholder": "アクティブなサーバーの所持ウマ娘がいません。親を追加して始めましょう！",
   "placeholderRoster": "このプロジェクトのウマ娘一覧は空です。所持ウマ娘から追加するか、新しく作成してください。",
   "topPairTitle": "継承相性上位ペア",
   "topPair": {
@@ -117,12 +116,11 @@
     "avgRuns": "平均{{value}}回",
     "noMissingSkills": "不足している高ランク（S/A）のウィッシュリストスキルはありません。",
     "probScoreUpgrade": "スコア更新の確率",
-    "probAssumptionsTitle": "計算の前提条件",
     "probAssumptionsText": "これは、子の*個体スコア*（祖父母ボーナス前）が、弱い方の親のスコアを超える推定値です。以下の前提に基づいています：\n\n- **育成結果:** 1回の育成で平均{{count}}個の白因子が獲得されると仮定します。\n- **青因子 (★1/★2/★3):**\n  - 1100+ ステータス: 40% / 50% / 10%\n  - 600-1099 ステータス: 44% / 50% / 6%\n- **赤/白因子 (★1/★2/★3):**\n  - SS+ランク未満: 50% / 45% / 5%\n  - SS+ランク以上: 20% / 70% / 10%\n- **固有スキル:** 結果が固定されているため、この計算には含まれません。\n- **モデル:** これは統計モデルであり、ゲーム内での結果を保証するものではありません。",
     "disclaimerText": "確率はゲームデータと特定の仮定に基づいた推定値です：",
-    "disclaimerBlue": "青因子の確率は、2つの主要な青因子に対する目標ステータスに基づいています。",
+    "disclaimerScoreUpgrade": "スコア更新確率は、子の潜在的な個体スコアを、弱い方の親の個体スコアと比較します。",
+    "disclaimerBlue": "青因子の確率は、5つ全ての青因子タイプに対する目標ステータスに基づいています。",
     "disclaimerPink": "赤因子の確率は、Aランクの適性が{{count}}個あると仮定しています。",
-    "disclaimerWhite": "白因子の確率は、スキルの最高レアリティ版（例：金スキル）を取得することに基づいています。",
-    "disclaimerScoreUpgrade": "スコア更新確率は、子の潜在的な個体スコアを、弱い方の親の個体スコアと比較します。"
+    "disclaimerWhite": "白因子の確率は、継承可能なすべてのスキルの加重平均に基づいています。"
   }
 }
