feat: add sp budget input to probability calculator UI

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -94,6 +94,8 @@
         "probabilityCalculator": "Probability Calculator",
         "inputs": "Inputs",
         "targetStats": "Target Stats",
+        "spBudget": "Est. Skill Point Budget",
+        "spBudgetTooltip": "The total amount of Skill Points you expect to have available to purchase skills during the training run. This directly impacts how many white sparks can be acquired.",
         "trainingRank": "Est. Final Rank",
         "rankBelowSS": "Below SS+",
         "rankSSPlus": "SS+ & Higher",
@@ -103,7 +105,7 @@
         "avgRuns": "Avg. {{value}} runs",
         "noMissingSkills": "No missing high-value (S/A rank) wishlist skills.",
         "probScoreUpgrade": "Probability of Score Upgrade",
-        "probAssumptionsText": "This is an estimate of the child's *individual score* (before grandparent bonuses) exceeding the weaker parent's. It is based on these assumptions:\n\n- **Run Outcome:** An average of {{count}} white sparks are obtained per run.\n- **Blue Sparks (1★/2★/3★):**\n  - 1100+ Stats: 40% / 50% / 10%\n  - 600-1099 Stats: 44% / 50% / 6%\n- **Pink/White Sparks (1★/2★/3★):**\n  - Below SS+ Rank: 50% / 45% / 5%\n  - SS+ & Higher Rank: 20% / 70% / 10%\n- **Unique Spark:** Not factored into this calculation as its outcome is fixed.\n- **Model:** This is a statistical model and not a guarantee of in-game results.",
+        "probAssumptionsText": "This is an estimate based on a set of assumptions. See the disclaimer below for details.",
         "disclaimerText": "Probabilities are estimates based on game data and certain assumptions:",
         "disclaimerScoreUpgrade": "Score upgrade probability compares the child's potential individual score to the weaker parent's individual score.",
         "disclaimerBlue": "Blue spark probability is based on the target stats for all 5 blue factor types.",
