--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -118,11 +118,10 @@
     "avgRuns": "平均{{value}}回",
     "noMissingSkills": "不足している高ランク（S/A）のウィッシュリストスキルはありません。",
     "probScoreUpgrade": "スコア更新の確率",
-    "probAssumptionsText": "これは一連の仮定に基づく推定値です。詳細は以下の免責事項をご覧ください。",
     "disclaimerText": "確率はゲームデータと特定の仮定に基づいた推定値です：",
     "disclaimerScoreUpgrade": "スコア更新確率は、子の潜在的な個体スコアを、弱い方の親の個体スコアと比較します。",
     "disclaimerBlue": "青因子の確率は、5つ全ての青因子タイプに対する目標ステータスに基づいています。",
     "disclaimerPink": "赤因子の確率は、Aランクの適性が{{count}}個あると仮定しています。",
-    "disclaimerWhite": "白因子の確率は、継承可能なすべてのスキルの加重平均に基づいています。"
+    "disclaimerWhiteSP": "獲得される白因子の数は、ウィッシュリスト、ペアの血統、および提供されたスキルポイント予算に基づいて推定されます。Lv. 1のスキルのみが考慮されます。"
   }
 }
