--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -13,5 +13,6 @@
   "searchPlaceholder": "Search...",
   "noResults": "No results found.",
   "selectUmaTitle": "Select Trainee",
-  "disclaimer": "Disclaimer"
+  "disclaimer": "Disclaimer",
+  "calculating": "Calculating"
 }
