--- a/src/locales/jp/common.json
+++ b/src/locales/jp/common.json
@@ -13,5 +13,6 @@
   "searchPlaceholder": "検索...",
   "noResults": "結果が見つかりません。",
   "selectUmaTitle": "育成ウマ娘を選択",
-  "disclaimer": "免責事項"
+  "disclaimer": "免責事項",
+  "calculating": "計算中"
 }
