--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -116,6 +116,9 @@
         "disclaimerScoreUpgrade": "Score upgrade probability compares the child's potential individual score to the weaker parent's individual score.",
         "disclaimerBlue": "Blue spark probability is based on the target stats for all 5 blue factor types.",
         "disclaimerPinkDynamic": "Pink spark probability is based on the intersection of your Goal and selected Target Aptitudes.",
-        "disclaimerWhiteSP": "The number of white sparks acquired is estimated based on your wishlist, the pair's lineage, and the provided Skill Point Budget. Only Lv. 1 skills are considered."
+        "disclaimerWhiteSP": "The number of white sparks acquired is estimated based on your wishlist, the pair's lineage, and the provided Skill Point Budget. Only Lv. 1 skills are considered.",
+        "selectAll": "Select All",
+        "deselectAll": "Deselect All",
+        "otherSkills": "Other"
     }
 }
