--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -129,6 +129,9 @@
     "disclaimerScoreUpgrade": "スコア更新確率は、子の潜在的な個体スコアを、弱い方の親の個体スコアと比較します。",
     "disclaimerBlue": "青因子の確率は、5つ全ての青因子タイプに対する目標ステータスに基づいています。",
     "disclaimerPinkDynamic": "赤因子の確率は、目標と選択された目標適性の共通部分に基づいています。",
-    "disclaimerWhiteSP": "獲得される白因子の数は、ウィッシュリスト、ペアの血統、および提供されたスキルポイント予算に基づいて推定されます。Lv. 1のスキルのみが考慮されます。"
+    "disclaimerWhiteSP": "獲得される白因子の数は、ウィッシュリスト、ペアの血統、および提供されたスキルポイント予算に基づいて推定されます。Lv. 1のスキルのみが考慮されます。",
+    "selectAll": "すべて選択",
+    "deselectAll": "すべて選択解除",
+    "otherSkills": "その他"
   }
 }
