refactor(calculator): implement dynamic pink spark model

--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -105,7 +105,7 @@
         "selectAcquirableSkills": "Select Acquirable Skills...",
         "allSkillsConsidered": "All lineage skills considered",
         "skillsSelected": "{{count}} skills selected",
-        "targetAptitudes": "Target Aptitudes (for Pink Sparks)",
+        "obtainableAptitudes": "Obtainable Aptitudes (for Pink Sparks)",
         "estimatedProbabilities": "Estimated Probabilities",
         "primaryBlueSpark": "3★ Primary Blue Spark",
         "primaryPinkSpark": "3★ Primary Pink Spark",
@@ -115,7 +115,7 @@
         "disclaimerText": "Probabilities are estimates based on game data and certain assumptions:",
         "disclaimerScoreUpgrade": "Score upgrade probability compares the child's potential individual score to the weaker parent's individual score.",
         "disclaimerBlue": "Blue spark probability is based on the target stats for all 5 blue factor types.",
-        "disclaimerPinkDynamic": "Pink spark probability is based on the intersection of your Goal and selected Target Aptitudes.",
+        "disclaimerPinkDynamic": "Pink spark probability is based on the intersection of your Goal and the 'Obtainable Aptitudes' list.",
         "disclaimerWhiteSP": "The number of white sparks acquired is estimated based on your wishlist, the pair's lineage, and the provided Skill Point Budget. Only Lv. 1 skills are considered.",
         "selectAll": "Select All",
         "deselectAll": "Deselect All",
