--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -118,7 +118,7 @@
     "selectAcquirableSkills": "習得可能なスキルを選択...",
     "allSkillsConsidered": "血統内の全スキルを考慮",
     "skillsSelected": "{{count}}個のスキルを選択済み",
-    "targetAptitudes": "目標適性（赤因子用）",
+    "obtainableAptitudes": "習得可能な適性（赤因子用）",
     "estimatedProbabilities": "推定確率",
     "primaryBlueSpark": "★3 主要青因子",
     "primaryPinkSpark": "★3 主要赤因子",
@@ -128,7 +128,7 @@
     "disclaimerText": "確率はゲームデータと特定の仮定に基づいた推定値です：",
     "disclaimerScoreUpgrade": "スコア更新確率は、子の潜在的な個体スコアを、弱い方の親の個体スコアと比較します。",
     "disclaimerBlue": "青因子の確率は、5つ全ての青因子タイプに対する目標ステータスに基づいています。",
-    "disclaimerPinkDynamic": "赤因子の確率は、目標と選択された目標適性の共通部分に基づいています。",
+    "disclaimerPinkDynamic": "赤因子の確率は、目標と「習得可能な適性」リストの共通部分に基づいています。",
     "disclaimerWhiteSP": "獲得される白因子の数は、ウィッシュリスト、ペアの血統、および提供されたスキルポイント予算に基づいて推定されます。Lv. 1のスキルのみが考慮されます。",
     "selectAll": "すべて選択",
     "deselectAll": "すべて選択解除",
