refactor(i18n): remove skillsSelected key from common namespace

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -17,6 +17,5 @@
   "calculating": "Calculating",
   "selectAll": "Select All",
   "deselectAll": "Deselect All",
-  "otherSkills": "Other",
-  "skillsSelected": "{{count}} skills selected"
+  "otherSkills": "Other"
 }
