--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -104,7 +104,6 @@
         "acquirableSkills": "Acquirable White Sparks",
         "selectAcquirableSkills": "Select Acquirable Skills...",
         "allSkillsConsidered": "All lineage skills considered",
-        "skillsSelected": "{{count}} skills selected",
         "obtainableAptitudes": "Obtainable Aptitudes (for Pink Sparks)",
         "estimatedProbabilities": "Estimated Probabilities",
         "primaryBlueSpark": "3★ Primary Blue Spark",
@@ -119,6 +118,7 @@
         "disclaimerWhiteSP": "The number of white sparks acquired is estimated based on your wishlist, the pair's lineage, and the provided Skill Point Budget. Only Lv. 1 skills are considered.",
         "selectAll": "Select All",
         "deselectAll": "Deselect All",
-        "otherSkills": "Other"
+        "otherSkills": "Other",
+        "skillsSelected": "{{count}} skills selected"
     }
 }
