--- a/src/locales/en/roster.json
+++ b/src/locales/en/roster.json
@@ -117,9 +117,7 @@
         "disclaimerBlue": "Blue spark probability is based on the target stats for all 5 blue factor types.",
         "disclaimerPinkDynamic": "Pink spark probability is based on the intersection of your Goal and the 'Obtainable Aptitudes' list.",
         "disclaimerWhiteSP": "The number of white sparks acquired is estimated based on your wishlist, the pair's lineage, and the provided Skill Point Budget. Only Lv. 1 skills are considered.",
-        "selectAll": "Select All",
-        "deselectAll": "Deselect All",
-        "otherSkills": "Other",
+        "selectLineage": "Select Lineage",
         "skillsSelected": "{{count}} skills selected"
     }
 }
