--- a/src/locales/jp/roster.json
+++ b/src/locales/jp/roster.json
@@ -130,9 +130,7 @@
     "disclaimerBlue": "青因子の確率は、5つ全ての青因子タイプに対する目標ステータスに基づいています。",
     "disclaimerPinkDynamic": "赤因子の確率は、目標と「習得可能な適性」リストの共通部分に基づいています。",
     "disclaimerWhiteSP": "獲得される白因子の数は、ウィッシュリスト、ペアの血統、および提供されたスキルポイント予算に基づいて推定されます。Lv. 1のスキルのみが考慮されます。",
-    "selectAll": "すべて選択",
-    "deselectAll": "すべて選択解除",
-    "otherSkills": "その他",
+    "selectLineage": "血統から選択",
     "skillsSelected": "{{count}}個のスキルを選択済み"
   }
 }
